docs: state what each client and the server actually require